
[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cd_randomizer"
version = "0.0.1"
description = "A simple CD randomizer package."
authors = [
    {name = "Nicholas Capasso", email = "codedocta@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # List your dependencies here
    # "numpy",
    # "pandas",
]

[project.urls]
Home = "https://github.com/codedocta/cd_randomizer"
